# pdf_indexer

./: main.py  pdf_indexer.py  pyproject.toml  requirements.txt  setup.py
PDFIndexer/: index.py
