[tool.poetry]
name = "pdfindexer"
version = "0.1.0"
description = "This package helps in the addition of index to PDFs without it."
authors = ["oldsphere <crubio.abujas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
